# spectre

./: .gitignore  ADR.md  CHAOS_ENGINEERING.md  COMANDOS.md  Cargo.toml  Dockerfile  HELM_CHART_SUMMARY.md  IMPLEMENTATION_REPORT.md  INTEGRATION.md  KUBERNETES.md  NEXT_STEPS.md  PHASE_2_COMPLETE.md  QUICK_STATUS.md  README.md  ROADMAP.md  STATUS.md  TESTING.md  docker-compose.yml  flake.nix  test_ingest.py
.github/workflows/: ci.yml
apps/cerebro-rag/: README.md
charts/spectre-proxy/: .helmignore  Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
charts/spectre-proxy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/spectre-proxy/templates/tests/: test-connection.yaml
config/: nats-server.conf
crates/spectre-core/src/: lib.rs  shutdown.rs
crates/spectre-events/: Cargo.toml  NATS_FAILURE_SCENARIOS.md
crates/spectre-events/src/: client.rs  event.rs  lib.rs  publisher.rs  subscriber.rs
crates/spectre-events/tests/: event_bus_test.rs
crates/spectre-observability/: Cargo.toml  README.md
crates/spectre-observability/src/: lib.rs  metrics.rs
crates/spectre-proxy/: Cargo.toml
crates/spectre-proxy/src/: main.rs
crates/spectre-proxy/tests/: integration_test.rs
crates/spectre-secrets/: Cargo.toml
crates/spectre-secrets/src/: crypto.rs  events.rs  lib.rs  rotation.rs  storage.rs  types.rs
crates/spectre-secrets/tests/: crypto_properties.proptest-regressions  crypto_properties.rs  rotation_test.rs
nix/images/: spectre-proxy.nix
nix/kubernetes/: configmap.nix  default.nix  deployment.nix  ingress.nix  nats.nix  neutron-stub.nix  service.nix
nix/lib/: k8s.nix
nix/services/nats/: conf.nix  default.nix
scripts/: chaos-test.sh  load-test.sh
specs/: 000-VISION-AND-INSIGHTS.md
