[package]
name = "spectre-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
spectre-secrets = { path = "../spectre-secrets" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "auth", "cors"] }
jsonwebtoken = "9.2"
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
